fix(Get Sellers):User can get all sellers (#70)
