# src/swagger.json
@@ -179,6 +179,38 @@
         }
       }
     },
+    "/api/users/sellers": {
+      "get": {
+        "tags": ["users"],
+        "summary": "get all sellers",
+        "description": "it should list all sellers",
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "status": {
+                      "type": "string"
+                    },
+                    "data": {
+                      "type": "array",
+                      "items": {}
+                    }
+                  }
+                },
+                "example": {
+                  "status": "success",
+                  "data": []
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/users/profile": {
       "patch": {
         "tags": ["users"],
@@ -1323,6 +1355,11 @@
                     "type": "string",
                     "required": false,
                     "default": ""
+                  },
+                  "description": {
+                    "type": "string",
+                    "required": false,
+                    "default": ""
                   }
                 }
               }
@@ -1350,29 +1387,7 @@
                 },
                 "example": {
                   "status": "Success!",
-                  "data": {
-                    "id": "3764f889-b2d7-44bf-8bd1-35c80b61dc8d",
-                    "name": "Toyota",
-                    "slug": "Toyota",
-                    "images": [
-                      "https://res.cloudinary.com/dn8vyfgnl/image/upload/v1712421646/a5mpdlll7subatkekkpg.webp",
-                      "https://res.cloudinary.com/dn8vyfgnl/image/upload/v1712421647/mwlwva0knlbqmodaeep5.jpg",
-                      "https://res.cloudinary.com/dn8vyfgnl/image/upload/v1712421647/kq02mwxjybjj6wxwbq9w.png",
-                      "https://res.cloudinary.com/dn8vyfgnl/image/upload/v1712421648/zwl3pgmbyy6eaqratuz9.png"
-                    ],
-                    "category": {
-                      "id": 1,
-                      "name": "Cars"
-                    },
-                    "price": 5000,
-                    "expiryDate": null,
-                    "bonus": null,
-                    "status": "available",
-                    "quantity": 0,
-                    "sellerId": "3a75ff63-736e-4f7b-9d98-26dd10f4d0c6",
-                    "createdAt": "2024-04-06T16:40:49.098Z",
-                    "updatedAt": "2024-04-06T16:40:49.098Z"
-                  },
+                  "data": {},
                   "message": "Product created successfully!"
                 }
               }
@@ -1490,83 +1505,7 @@
                   "status": "Success!",
                   "data": {
                     "totalItems": 4,
-                    "Products": [
-                      {
-                        "id": "20adb047-8102-494d-8a8a-7b50990bc770",
-                        "name": "Tesla 2021",
-                        "slug": "Tesla-2021",
-                        "images": [
-                          "https://res.cloudinary.com/dn8vyfgnl/image/upload/v1712655506/wnkf3bz48p4xqqdfawxe.jpg",
-                          "https://res.cloudinary.com/dn8vyfgnl/image/upload/v1712655506/hrs5xtkuesgtmqp7hxzt.jpg",
-                          "https://res.cloudinary.com/dn8vyfgnl/image/upload/v1712655507/wfv49zbedielow5o3wv6.jpg",
-                          "https://res.cloudinary.com/dn8vyfgnl/image/upload/v1712655508/exoqd0ljytlpwzqnlfku.jpg"
-                        ],
-                        "category": "Cars",
-                        "price": 60000,
-                        "expiryDate": null,
-                        "bonus": null,
-                        "status": "available",
-                        "quantity": 0,
-                        "seller": {
-                          "id": "67c5effe-7445-4fa1-97c7-6a2d73223fd7",
-                          "name": "ruth uwmaha",
-                          "email": "test1@example.com",
-                          "phone": "1234567890"
-                        },
-                        "createdAt": "2024-04-09T09:38:28.677Z",
-                        "updatedAt": "2024-04-09T09:38:28.677Z"
-                      },
-                      {
-                        "id": "42b16d25-eba2-4b61-8414-5b79bcd1dd54",
-                        "name": "Tesla 2022",
-                        "slug": "Tesla-2022",
-                        "images": [
-                          "https://res.cloudinary.com/dn8vyfgnl/image/upload/v1712654317/rty18ci6afl4b3zsnyia.jpg",
-                          "https://res.cloudinary.com/dn8vyfgnl/image/upload/v1712654317/ogzbowhizuj2ztgbwkvc.jpg",
-                          "https://res.cloudinary.com/dn8vyfgnl/image/upload/v1712654318/qkin8np2bekvrnkgzuph.jpg",
-                          "https://res.cloudinary.com/dn8vyfgnl/image/upload/v1712654326/m5ow2rc8ez2pb7edy2ip.jpg"
-                        ],
-                        "category": "Cars",
-                        "price": 60000,
-                        "expiryDate": null,
-                        "bonus": null,
-                        "status": "available",
-                        "quantity": 0,
-                        "seller": {
-                          "id": "67c5effe-7445-4fa1-97c7-6a2d73223fd7",
-                          "name": "ruth uwmaha",
-                          "email": "test1@example.com",
-                          "phone": "1234567890"
-                        },
-                        "createdAt": "2024-04-09T09:18:46.325Z",
-                        "updatedAt": "2024-04-09T09:18:46.325Z"
-                      },
-                      {
-                        "id": "302b7e29-3e4d-4198-b4b3-d9274654679e",
-                        "name": "Tesla 2023",
-                        "slug": "Tesla-2023",
-                        "images": [
-                          "https://res.cloudinary.com/dn8vyfgnl/image/upload/v1712649578/nefk7thvfpucsmn3mdxm.jpg",
-                          "https://res.cloudinary.com/dn8vyfgnl/image/upload/v1712649578/gofryvfhcoouhlofgyaa.jpg",
-                          "https://res.cloudinary.com/dn8vyfgnl/image/upload/v1712649579/jv7ki7kequjgdluqqeed.jpg",
-                          "https://res.cloudinary.com/dn8vyfgnl/image/upload/v1712649580/srhzwvum3kgd5aoun3ai.jpg"
-                        ],
-                        "category": "Cars",
-                        "price": 60000,
-                        "expiryDate": null,
-                        "bonus": null,
-                        "status": "available",
-                        "quantity": 0,
-                        "seller": {
-                          "id": "67c5effe-7445-4fa1-97c7-6a2d73223fd7",
-                          "name": "ruth uwmaha",
-                          "email": "test1@example.com",
-                          "phone": "1234567890"
-                        },
-                        "createdAt": "2024-04-09T07:59:40.661Z",
-                        "updatedAt": "2024-04-09T07:59:40.661Z"
-                      }
-                    ],
+                    "Products": [],
                     "totalPages": 2,
                     "from": 0,
                     "to": 3
